@@ -1,5 +1,12 @@
 2009-05-30  Bruno Haible  <bruno@clisp.org>
 
+	Generate a compiler independent <unistring/stdint.h>.
+	* lib/Makefile.am (unistring/stdint.h): Produce a file that relies
+	on more #ifs.
+	Reported by David Byron <dbyron@dbyron.com>.
+
+2009-05-30  Bruno Haible  <bruno@clisp.org>
+
 	Generate a compiler independent <unistring/stdbool.h>.
 	* lib/stdbool.mini.h: New file, a reduced version of gnulib's
 	lib/stdbool.in.h.
